--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
+  background-color: #09a603;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  background-color: rgb(13, 187, 13);
+  justify-content: flex-start;
 }
