--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -1,14 +1,14 @@
 .main {
-  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 20px;
+  justify-content: flex-start;
+  min-height: 600px;
 }
 
 .main__cards {
   width: 90%;
+  min-height: 400px;
   display: flex;
   justify-content: space-around;
   gap: 20px;
@@ -24,6 +24,18 @@
 }
 
 .main__bottom {
+  margin-top: 40px;
   display: flex;
-  gap: 10px;
+  gap: 20px;
+}
+
+.main__button {
+  background-color: #5d04d9;
+  border: 0;
+  border-radius: 5px 5px;
+  color: #fff;
+  height: 50px;
+  padding: 0;
+  width: 100px;
+  cursor: pointer;
 }
