--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 .App {
-  text-align: center;
-  background-color: #09a603;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  min-height: 100%;
+  position: relative;
 }
