--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,5 +1,11 @@
 .footer {
   background-color: #353a40;
   color: white;
+  width: 100%;
+  height: 60px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
   padding: 20px;
 }
