--- a/src/Components/Popup/popup.css
+++ b/src/Components/Popup/popup.css
@@ -5,15 +5,15 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.55);
-  display: flex;
-  visibility: hidden;
+  display: none;
   top: 0;
   left: 0;
-  z-index: 9999;
+  bottom: 0;
+  right: 0;
 }
 
 .popup__opened {
-  visibility: visible;
+  display: flex;
   opacity: 1;
 }
 
@@ -23,7 +23,6 @@
   width: 250px;
   height: 250px;
   position: relative;
-  top: -50px;
   display: flex;
   flex-direction: column;
   align-items: center;
